Fix Docker backend startup
- Fix main.js path from dist/main to dist/src/main
- Make seed command optional (continue even if it fails)
- Backend now starts successfully in Docker

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -39,4 +39,5 @@ COPY --from=builder /app/node_modules/.prisma ./node_modules/.prisma
 EXPOSE 4000
 
 # Run migrations and start the application
-CMD ["sh", "-c", "npx prisma migrate deploy && npx prisma db seed && node dist/main"]
+# Seed is optional - continue even if it fails
+CMD ["sh", "-c", "npx prisma migrate deploy && (npx prisma db seed || true) && node dist/src/main"]
