--- a/backend/package.json
+++ b/backend/package.json
@@ -40,6 +40,8 @@
     "@types/nodemailer": "^6.4.14",
     "@types/passport-google-oauth20": "^2.0.16",
     "@types/passport-jwt": "^4.0.1",
+    "auth0": "^4.12.0",
+    "express-oauth2-jwt-bearer": "^1.6.0",
     "bcrypt": "^6.0.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
